[gd_scene load_steps=8 format=3 uid="uid://bou2wvyxh2s2l"]

[ext_resource type="Script" path="res://shop/shop.gd" id="1_talen"]
[ext_resource type="Texture2D" uid="uid://pokpvxsaa8n7" path="res://global/art/gradient_bg.tres" id="2_f8j4k"]
[ext_resource type="PackedScene" uid="uid://ciiib2lfqt7gd" path="res://shop/ui/ui_shop_upgrade_item_offer_list.tscn" id="2_nqhl3"]
[ext_resource type="Texture2D" uid="uid://bq4ddu0518qo6" path="res://global/art/bg_shop_overlay.png" id="3_0sxmb"]
[ext_resource type="PackedScene" uid="uid://yw7ig7e0rsm8" path="res://shop/ui/ui_shop_offer.tscn" id="3_eds27"]
[ext_resource type="PackedScene" uid="uid://bcwuvhyl3kdtp" path="res://global/ui/currency/currency_display_gems.tscn" id="3_plved"]
[ext_resource type="Texture2D" uid="uid://d33bpih7f0xo6" path="res://collectibles/gem/gem.png" id="6_0y5bu"]

[node name="Shop" type="Node2D"]
script = ExtResource("1_talen")

[node name="CanvasLayerBG" type="CanvasLayer" parent="."]
layer = -10

[node name="TextureRect" type="TextureRect" parent="CanvasLayerBG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f8j4k")
expand_mode = 1
stretch_mode = 6

[node name="TextureRect2" type="TextureRect" parent="CanvasLayerBG"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_0sxmb")
expand_mode = 1
stretch_mode = 6

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -87.5
offset_right = 87.5
offset_bottom = 58.0
grow_horizontal = 2
theme_type_variation = &"Label_L"
text = "The Shop"

[node name="Label2" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -178.5
offset_top = 170.0
offset_right = 178.5
offset_bottom = 257.0
grow_horizontal = 2
theme_type_variation = &"Label_L"
text = "Choose One:"

[node name="CurrencyDisplayGems" parent="CanvasLayer" instance=ExtResource("3_plved")]
offset_left = 16.0
offset_top = 16.0
offset_right = 155.0
offset_bottom = 103.0

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UIShopUpgradeItemOfferList" parent="CanvasLayer/CenterContainer" instance=ExtResource("2_nqhl3")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -90.0
offset_right = -21.0
offset_bottom = 90.0
grow_horizontal = 0
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "Reroll"
horizontal_alignment = 1

[node name="UIShopOfferRefresh" parent="CanvasLayer/VBoxContainer" instance=ExtResource("3_eds27")]
layout_mode = 2
icon = ExtResource("6_0y5bu")

[node name="ButtonBack" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -66.0
offset_right = 103.0
offset_bottom = -16.0
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="CanvasLayer/ButtonBack" to="." method="_on_button_back_pressed"]
